colcon_ws/log/build_2022-02-24_18-17-45/auto_nav/stderr.log
  File "/home/prince/colcon_ws/install/auto_nav/lib/python3.8/site-packages/auto_nav/r2auto_nav4_snake.py", line 59
    roll_x = math.atan2(t0, t1)left
                               ^
SyntaxError: invalid syntax

